Removed Invite Tracking and Polls, Discord now has this built in Dependency updates Reduce standard log level